# R-Type

./: .clang-format  .gitignore  .gitmodules  ACommunication_8cpp.html  ACommunication_8hpp.html  ACommunication_8hpp_source.html  AnimationSystem_8cpp.html  AnimationSystem_8hpp.html  AnimationSystem_8hpp_source.html  AnimeSystem_8cpp.html  AnimeSystem_8hpp.html  AnimeSystem_8hpp_source.html  AssetManager_8hpp.html  AssetManager_8hpp_source.html  CMakeLists.txt  CameraComponent_8hpp.html  CameraComponent_8hpp_source.html  CameraSystem_8cpp.html  CameraSystem_8hpp.html  CameraSystem_8hpp_source.html  ChangeScene_8cpp.html  ClientSession_8cpp.html  ClientSession_8hpp.html  ClientSession_8hpp_source.html  CollisionCallbacks_8cpp.html  CollisionComponent_8hpp.html  CollisionComponent_8hpp_source.html  CollisionEvent_8cpp.html  CollisionSystem_8cpp.html  CollisionSystem_8hpp.html  CollisionSystem_8hpp_source.html  CollisionsUtils_8hpp.html  CollisionsUtils_8hpp_source.html  ConnexionEvent_8cpp.html  ControlSystem_8cpp.html  ControlSystem_8hpp.html  ControlSystem_8hpp_source.html  ControllableComponent_8hpp.html  ControllableComponent_8hpp_source.html  ControllableEvent_8cpp.html  (+548 more)
GameEngine/: .gitignore  CMakeLists.txt  build_unix.sh  build_win.bat  conanfile.py  conanfile.txt  config.json  game_engine.cmake  main.cpp  vcpkg.json
GameEngine/GameEngine/include/: ComponentArray.hpp  Error.hpp  GameEngine.hpp  SystemLoadingMusic.hpp  SystemManager.hpp  SystemRenderer.hpp
GameEngine/GameEngine/include/Components/: Font.hpp  Music.hpp  Sprite.hpp  Text.hpp
GameEngine/GameEngine/include/utils/: Vector.hpp
GameEngine/include/: AssetManager.hpp  Component.hpp  ComponentArray.hpp  Debug.hpp  Entity.hpp  EntityManager.hpp  Error.hpp  Event.hpp  GameEngine.hpp  GameEngineServer.hpp  ISafeQueue.hpp  JsonParser.hpp  Keyboard.hpp  Mouse.hpp  ParserJson.hpp  PrefabManager.hpp  RType.hpp  Registry.hpp  SafeQueue.hpp  SceneManager.hpp  SparseArray.hpp  SystemLoadingMusic.hpp  SystemLoadingText.hpp  SystemLoadingTexture.hpp  SystemManager.hpp  Systems.hpp  View.hpp  renderer.hpp
GameEngine/include/Components/: Font.hpp  FontComponent.hpp  Music.hpp  MusicComponent.hpp  RenderableComponent.hpp  TextComponent.hpp  TextureComponent.hpp  Transform.hpp  ViewComponent.hpp  WindowComponent.hpp
GameEngine/include/Components/RenderComponents/: Font.hpp  Music.hpp  Sprite.hpp  Text.hpp  Texture.hpp  View.hpp
GameEngine/include/Network/: ACommunication.hpp  Serialization.hpp
GameEngine/include/Network/Server/: ACommunication.hpp  ClientSession.hpp  Communication.hpp  TcpServer.hpp  UdpServer.hpp
GameEngine/include/Systems/: SystemLoadingText.cpp  printDTimeSystem.hpp
GameEngine/include/Utils/: Vector.hpp
GameEngine/include/components/: CameraComponent.hpp  CircleCollider.hpp  CollisionComponent.hpp  ControllableComponent.hpp  DamageComponent.hpp  FontComponent.hpp  GravityComponent.hpp  HealthComponent.hpp  InputComponent.hpp  LifePointComponent.hpp  MusicComponent.hpp  NetworkIdComponent.hpp  PositionComponent.hpp  PressableComponent.hpp  RectCollider.hpp  ScoreComponent.hpp  ScriptComponent.hpp  TextComponent.hpp  TextureAnimatedComponent.hpp  TextureComponent.hpp  TransformComponent.hpp  VelocityComponent.hpp  ViewComponent.hpp  WindowComponent.hpp
GameEngine/include/imgui/: imconfig.h
GameEngine/include/systems/: AnimationSystem.hpp  AnimeSystem.hpp  CameraSystem.hpp  CollisionSystem.hpp  ControlSystem.hpp  DamageSystem.hpp  DrawSystem.hpp  GravitySystem.hpp  InputSystem.hpp  MusicSystem.hpp  PositionSystem.hpp  PressableSystem.hpp  ScriptingSystem.hpp  ShowHitboxSystem.hpp
GameEngine/include/utils/: Circle.hpp  CollisionsUtils.hpp  DeltaTime.hpp  IScene.hpp  JsonConversion.hpp  PrefabManager.hpp  Rect.hpp  RenderInterfaces.hpp  SfmlTypes.hpp  Utils.hpp  Vector.hpp  sfmlTypes.hpp
GameEngine/src/: ControlSystem.cpp  Debug.cpp  DeltaTime.cpp  Entity.cpp  EntityManager.cpp  Error.cpp  Event.cpp  Inputs.cpp  Main.cpp  ParserJson.cpp  PositionSystem.cpp  PrefabManager.cpp  SceneManager.cpp
GameEngine/src/Network/: ACommunication.cpp
GameEngine/src/Network/server/: ACommunication.cpp  ClientSession.cpp  TcpServer.cpp  UdpServer.cpp
GameEngine/src/Systems/: SystemDraw.cpp  SystemLoadingMusic.cpp  SystemLoadingText.cpp  SystemLoadingTexture.cpp
GameEngine/src/sfml/: renderer.cpp
GameEngine/src/systems/: AnimationSystem.cpp  AnimeSystem.cpp  CameraSystem.cpp  CollisionSystem.cpp  ControlSystem.cpp  DamageSystem.cpp  DrawSystem.cpp  GravitySystem.cpp  InputSystem.cpp  MusicSystem.cpp  NetworkSystem.cpp  PositionSystem.cpp  PressableSystem.cpp  ScriptingSystem.cpp  ShowHitboxSystem.cpp
GameEngine/src/utils/: Circle.cpp  PrefabManager.cpp
GameEngine/tests/: TestVector.cpp  hello.cpp  hello2.cpp
Platformer/: platformer  platformer.cmake
R-Type/: .gitignore  CMakeLists.txt  build_unix.sh  build_win.bat  client.cmake
R-Type-server/: server.cmake
R-Type/include/: Ennemies.hpp  EntityManager.hpp  Game.hpp  GameManager.hpp  RTypeClient.hpp  TcpClient.hpp  UdpClient.hpp  WinLoseScene.hpp
R-Type/src/: Callback.cpp  CreateCamera.cpp  CreatePlayer.cpp  Ennemies.cpp  EntityManager.cpp  EntityUtils.cpp  GameLoop.cpp  HandleEvent.cpp  Movement.cpp  RTypeClient.cpp  RegisterComponent.cpp  RegisterSystems.cpp  SetGameEngine.cpp  SetupGame.cpp  TcpClient.cpp  UdpClient.cpp  WinLoseScene.cpp  main.cpp
R-Type/src/Event/: CollisionEvent.cpp  ConnexionEvent.cpp  ControllableEvent.cpp  DeleteEntityEvent.cpp  EndGameEvent.cpp  InputEvent.cpp  MoveEntityEvent.cpp  ScoreEvent.cpp  ShootEvent.cpp  StateTextureEvent.cpp  TextureEvent.cpp  TransformEvent.cpp  UpdateEntityEvent.cpp
R-Type/src/scripts/: parallax.lua  test.lua
config/: BorderMapDown.json  BorderMapLeft.json  BorderMapRight.json  BorderMapUp.json  Boss.json  ButtonQuit.json  ChargedShoot.json  DestroyEntityLeft.json  DestroyEntityRight.json  DestroyShootCollision.json  Dop.json  NonPlayerStarship.json  Parallax.json  ParallaxCollision.json  PataPata.json  Player.json  Shoot.json  SimpleShoot.json
docs/: GameEngine.md  Protocol.md  (+2 more)
(+273 files in other folders)
