cmake_minimum_required(VERSION 3.20.1)
set(CMAKE_CXX_STANDARD 17)

set(PROJECT_NAME "GameEngine")
set(LIBRARY_NAME "GameEngine")

set(INCLUDES include)
set(SRCS
    src/Error.cpp
    src/DeltaTime.cpp
    src/systems/ControlSystem.cpp
    src/systems/DrawSystem.cpp
    src/systems/PositionSystem.cpp
)

project(${PROJECT_NAME} LANGUAGES CXX)

link_directories(${CMAKE_CURRENT_BINARY_DIR}/libs)

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/lib/)

file(MAKE_DIRECTORY ${PROJECT_NAME})

add_library(${LIBRARY_NAME} STATIC ${SRCS})
file(GLOB CONAN_LIBS ${CMAKE_CURRENT_BINARY_DIR}/libs/*.a)
target_link_libraries(${LIBRARY_NAME} PUBLIC ${CONAN_LIBS})
target_include_directories(${PROJECT_NAME} PUBLIC ${INCLUDES})
file(COPY ${INCLUDES}/ DESTINATION ${CMAKE_SOURCE_DIR}/${PROJECT_NAME}/include)
