cmake_minimum_required(VERSION 3.20.1)
set(CMAKE_CXX_STANDARD 20)

set(PROJECT_NAME "R-Type")
set(BINARY_NAME "r-type")

set(INCLUDES include)
set(SRCS
    src/main.cpp
)

set(CMAKE_MAKE_PROGRAM $ENV{CMAKE_MAKE_PROGRAM})
set(CMAKE_CXX_COMPILER $ENV{CMAKE_CXX_COMPILER})

set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_SOURCE_DIR}/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_DEBUG ${CMAKE_SOURCE_DIR}/)
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY_RELEASE ${CMAKE_SOURCE_DIR}/)

project(${PROJECT_NAME} LANGUAGES CXX)
add_executable(${BINARY_NAME} ${SRCS})
target_link_libraries(${BINARY_NAME} PRIVATE sfml-system sfml-network sfml-graphics sfml-window ${CMAKE_SOURCE_DIR}/../GameEngine/GameEngine/lib/libGameEngine.a)
target_include_directories(${BINARY_NAME} PRIVATE ${INCLUDES} ${CMAKE_SOURCE_DIR}/../GameEngine/GameEngine/include/)
